--- a/.github/workflows/apptainer_exachem_mpich.yaml
+++ b/.github/workflows/apptainer_exachem_mpich.yaml
@@ -186,6 +186,18 @@ jobs:
               folder: apptainer.mpich
               scalapack: y
               elpa: y
+            - mpich: 4.2.3
+              mpich_device: ch4:ofi
+              ofi: 1.12.1
+              cc: gcc
+              ga_runtime: MPI_PROGRESS_RANK
+              ubuntu: jammy
+              gpu: nvidia_80
+              exachem_branch: main
+              tamm_branch: main
+              folder: apptainer.mpich
+              scalapack: y
+              elpa: y
             - mpich: aurora
               mpich_device: ch4:ofi
               ofi: git
