--- a/shifter.nersc/Dockerfile
+++ b/shifter.nersc/Dockerfile
@@ -46,6 +46,24 @@ ENV         PY_VERSION=3.11
 ENV	    PATH=/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/cuda-"$CUDA_VERSION_MAJOR"."$CUDA_VERSION_MINOR"/bin:/opt/nwchem/bin:/usr/local/bin \
 	    LD_LIBRARY_PATH=/usr/local/cuda-"$CUDA_VERSION_MAJOR"."$CUDA_VERSION_MINOR"/lib64:/usr/local/lib  
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+
+RUN <<EOF
+echo "line=\$(grep -hni ecp \$1|head -1|cut -d : -f 1) " > ecp_strip.sh
+echo " linem1=\$((line-2)) " >> ecp_strip.sh
+echo " rm -f az_ecp " >> ecp_strip.sh
+echo " head -n \$linem1 \$1 > az_ecp " >> ecp_strip.sh
+echo " mv az_ecp \$1 " >> ecp_strip.sh
+EOF
+
+RUN <<EOF
+echo "line=\$(grep -hni ecp \$1|head -1|cut -d : -f 1) " > ao_strip.sh
+echo " length=$(wc -l \$1 | cut -d ' ' -f 1) " >> ao_strip.sh
+echo " linem1=\$((length-line+1)) " >> ao_strip.sh
+echo " rm -f az_ecp " >> ao_strip.sh
+echo " head -n \$linem1 \$1 > az_ecp " >> ao_strip.sh
+echo " mv az_ecp \$1" >> ao_strip.sh
+EOF
+
 RUN         apt-get -q=2 update \
             && apt-get -q=2 -y upgrade \
             && apt-get install -q=2 -y  gcc-"$GCC_VERSION"  g++-"$GCC_VERSION" gfortran-"$GCC_VERSION"   make ssh patch rsync wget curl git file python"$PY_VERSION" libpython"$PY_VERSION"-dev python"$PY_VERSION"-dev bzip2 tar gnupg2 cmake \
@@ -55,7 +73,8 @@ RUN         apt-get -q=2 update \
 	    && update-alternatives --install /usr/bin/gfortran gfortran /usr/bin/gfortran-"$GCC_VERSION" 100 \
 	    && update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.11 100 \
 	    && update-alternatives --install /usr/bin/python3-config python3-config /usr/bin/python3.11-config 100 \
-	    && export FETCHED_LIBINT=0 \
+	    && wget   --progress=dot:giga -O  aug-cc-pv5z-pp.g94 "https://www.basissetexchange.org/download_basis/basis/aug-cc-pvqz-pp/format/gaussian94/?version=0&elements=29,30,31,32,33,34,35,36,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86&optimize_general=true&uncontract_general=true"  \
+&& export FETCHED_LIBINT=0 \
 	    && export FETCHED_MPICH=0 \
 	    && if [[ -z "${FC}" ]]; then export FC=gfortran ; fi \
 	    && echo FCFCFC is $FC >& nvcc.out && cat nvcc.out && rm nvcc.out \
@@ -74,7 +93,6 @@ RUN         apt-get -q=2 update \
 	    && echo "FFLAGS_IN is " $FFLAGS_IN \
             && echo "FFLAGS_IN is " $FFLAGS_IN 	>& nvcc.out && cat nvcc.out && rm nvcc.out \
 	    && echo GITHUB_REPOSITORY_OWNER is $GITHUB_REPOSITORY_OWNER \
-	    && wget --progress=dot:giga https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64/cuda-archive-keyring.gpg \
             && cp cuda-archive-keyring.gpg /usr/share/keyrings/cuda-archive-keyring.gpg \
             && echo "deb [signed-by=/usr/share/keyrings/cuda-archive-keyring.gpg] https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64/ /" |  tee /etc/apt/sources.list.d/cuda-ubuntu2204-x86_64.list \
             &&  wget --progress=dot:giga https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64/cuda-ubuntu2204.pin \
@@ -154,21 +172,18 @@ RUN         apt-get -q=2 update \
 	    && wget   --progress=dot:giga -O  aug-cc-pvdz-pp.g94 "https://www.basissetexchange.org/download_basis/basis/aug-cc-pvqz-pp/format/gaussian94/?version=0&elements=29,30,31,32,33,34,35,36,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86&optimize_general=true&uncontract_general=true" \
 	    && wget   --progress=dot:giga -O  aug-cc-pvtz-pp.g94 "https://www.basissetexchange.org/download_basis/basis/aug-cc-pvqz-pp/format/gaussian94/?version=0&elements=29,30,31,32,33,34,35,36,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86&optimize_general=true&uncontract_general=true" \
 	    && wget   --progress=dot:giga -O  aug-cc-pvqz-pp.g94 "https://www.basissetexchange.org/download_basis/basis/aug-cc-pvqz-pp/format/gaussian94/?version=0&elements=29,30,31,32,33,34,35,36,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86&optimize_general=true&uncontract_general=true" \
-	    && wget   --progress=dot:giga -O  aug-cc-pv5z-pp.g94 "https://www.basissetexchange.org/download_basis/basis/aug-cc-pvqz-pp/format/gaussian94/?version=0&elements=29,30,31,32,33,34,35,36,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86&optimize_general=true&uncontract_general=true" \
-&& ecp_strip(){ \
-&& line=$(grep -hni ecp $1|head -1|cut -d : -f 1) \
-&& linem1=$((line-2)) \
-&& rm -f az_ecp \
-&& head -n $linem1 $1 > az_ecp \
-&& mv az_ecp $1}  \
-&& ecp_strip aug-cc-pvdz-pp.g94 \
-&& ecp_strip aug-cc-pvtz-pp.g94 \
-&& ecp_strip aug-cc-pvqz-pp.g94 \
-&& ecp_strip aug-cc-pv5z-pp.g94 \
-&& ecp_strip aug-cc-pwcvdz-pp.g94 \
-&& ecp_strip aug-cc-pwcvtz-pp.g94 \
-&& ecp_strip aug-cc-pwcvqz-pp.g94 \
-&& ecp_strip aug-cc-pwcv5z-pp.g94 \
+	    && wget   --progress=dot:giga -O  aug-cc-pv5z-pp.g94 "https://www.basissetexchange.org/download_basis/basis/aug-cc-pvqz-pp/format/gaussian94/?version=0&elements=29,30,31,32,33,34,35,36,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86&optimize_general=true&uncontract_general=true"
+
+
+RUN chmod +x ecp_strip.sh \
+&& ./ecp_strip.sh aug-cc-pvdz-pp.g94  \
+&& ./ecp_strip.sh aug-cc-pvtz-pp.g94  \
+&& ./ecp_strip.sh aug-cc-pvqz-pp.g94  \
+&& ./ecp_strip.sh aug-cc-pv5z-pp.g94  \
+&& ./ecp_strip.sh aug-cc-pwcvdz-pp.g94  \
+&& ./ecp_strip.sh aug-cc-pwcvtz-pp.g94  \
+&& ./ecp_strip.sh aug-cc-pwcvqz-pp.g94  \
+&& ./ecp_strip.sh aug-cc-pwcv5z-pp.g94  \
 && 	     wget  --progress=dot:giga -O  aug-cc-pwcvdz-pp.ecp "https://www.basissetexchange.org/download_basis/basis/aug-cc-pwcvqz-pp/format/nwchem/?version=0&elements=29,30,31,32,33,34,35,36,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86&optimize_general=true&uncontract_general=true" \
 	    && wget  --progress=dot:giga -O  aug-cc-pwcvtz-pp.ecp "https://www.basissetexchange.org/download_basis/basis/aug-cc-pwcvqz-pp/format/nwchem/?version=0&elements=29,30,31,32,33,34,35,36,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86&optimize_general=true&uncontract_general=true" \
 	    && wget  --progress=dot:giga -O  aug-cc-pwcvqz-pp.ecp "https://www.basissetexchange.org/download_basis/basis/aug-cc-pwcvqz-pp/format/nwchem/?version=0&elements=29,30,31,32,33,34,35,36,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86&optimize_general=true&uncontract_general=true" \
@@ -176,22 +191,18 @@ RUN         apt-get -q=2 update \
 	    && wget  --progress=dot:giga -O  aug-cc-pvdz-pp.ecp "https://www.basissetexchange.org/download_basis/basis/aug-cc-pvqz-pp/format/nwchem/?version=0&elements=29,30,31,32,33,34,35,36,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86&optimize_general=true&uncontract_general=true" \
 	    && wget  --progress=dot:giga -O  aug-cc-pvtz-pp.ecp "https://www.basissetexchange.org/download_basis/basis/aug-cc-pvqz-pp/format/nwchem/?version=0&elements=29,30,31,32,33,34,35,36,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86&optimize_general=true&uncontract_general=true" \
 	    && wget  --progress=dot:giga -O  aug-cc-pvqz-pp.ecp "https://www.basissetexchange.org/download_basis/basis/aug-cc-pvqz-pp/format/nwchem/?version=0&elements=29,30,31,32,33,34,35,36,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86&optimize_general=true&uncontract_general=true" \
-	    && wget  --progress=dot:giga -O  aug-cc-pv5z-pp.ecp "https://www.basissetexchange.org/download_basis/basis/aug-cc-pvqz-pp/format/nwchem/?version=0&elements=29,30,31,32,33,34,35,36,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86&optimize_general=true&uncontract_general=true" \
-&& ao_strip(){ \
-&&line=$(grep -hni ecp $1|head -1|cut -d : -f 1) \
-&&    length=$(wc -l $1 | cut -d ' ' -f 1) \
-&& linem1=$((length-line+1)) \
-&& rm -f az_ecp \
-&& tail -n $linem1 $1 > az_ecp \
-&& mv az_ecp $1} \
-&& ao_strip aug-cc-pvdz-pp.ecp \
-&& ao_strip aug-cc-pvtz-pp.ecp \
-&& ao_strip aug-cc-pvqz-pp.ecp \
-&& ao_strip aug-cc-pv5z-pp.ecp \
-&& ao_strip aug-cc-pwcvdz-pp.ecp \
-&& ao_strip aug-cc-pwcvtz-pp.ecp \
-&& ao_strip aug-cc-pwcvqz-pp.ecp \
-&& ao_strip aug-cc-pwcv5z-pp.ecp  \
+	    && wget  --progress=dot:giga -O  aug-cc-pv5z-pp.ecp "https://www.basissetexchange.org/download_basis/basis/aug-cc-pvqz-pp/format/nwchem/?version=0&elements=29,30,31,32,33,34,35,36,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86&optimize_general=true&uncontract_general=true"
+
+
+RUN chmod +x ao_strip.sh \
+&& ./ao_strip aug-cc-pvdz-pp.ecp \
+&& ./ao_strip aug-cc-pvtz-pp.ecp \
+&& ./ao_strip aug-cc-pvqz-pp.ecp \
+&& ./ao_strip aug-cc-pv5z-pp.ecp \
+&& ./ao_strip aug-cc-pwcvdz-pp.ecp \
+&& ./ao_strip aug-cc-pwcvtz-pp.ecp \
+&& ./ao_strip aug-cc-pwcvqz-pp.ecp \
+&& ./ao_strip aug-cc-pwcv5z-pp.ecp  \
 	    && echo 'caching libint' \
 	    && cd /opt/install/exachem/ \
 	    && if [[ $FETCHED_LIBINT == 1 ]]; then rm -f /opt/cache/libint.tar.bz2 || true; else tar cjvf /opt/cache/libint.tar.bz2 ./include/libint* ./share/libint* ./lib/pkgconfig/libint*.pc ./lib/cmake/libint* ./lib/libint*  || true ; fi  \
