--- a/shifter.nersc/Dockerfile
+++ b/shifter.nersc/Dockerfile
@@ -219,6 +219,8 @@ RUN chmod +x /opt/ao_strip.sh \
             &&  apt-get -q=2 -y purge   patch wget  make git cpp-"$GCC_VERSION" gfortran-"$GCC_VERSION" gcc-"$GCC_VERSION" libicu-dev libpython"$PY_VERSION"-dev libstdc++-"$GCC_VERSION"-dev libc6-dev libgcc-"$GCC_VERSION"-dev libgfortran-"$GCC_VERSION"-dev  || true \
             && apt-get -q=2 -y install libgfortran5 libgomp1 && apt-get clean \
 	    && apt-get purge -y cuda-cccl-"$CUDA_VERSION_MAJOR"-"$CUDA_VERSION_MINOR" libcublas-dev-"$CUDA_VERSION_MAJOR"-"$CUDA_VERSION_MINOR" libcufft-dev-"$CUDA_VERSION_MAJOR"-"$CUDA_VERSION_MINOR" libcufft-"$CUDA_VERSION_MAJOR"-"$CUDA_VERSION_MINOR" libcusolver-dev-"$CUDA_VERSION_MAJOR"-"$CUDA_VERSION_MINOR" libcusparse-dev-"$CUDA_VERSION_MAJOR"-"$CUDA_VERSION_MINOR" libnpp-dev-"$CUDA_VERSION_MAJOR"-"$CUDA_VERSION_MINOR" libcurand-dev-"$CUDA_VERSION_MAJOR"-"$CUDA_VERSION_MINOR" cuda-nvrtc-dev-"$CUDA_VERSION_MAJOR"-"$CUDA_VERSION_MINOR"  libcufile-dev-"$CUDA_VERSION_MAJOR"-"$CUDA_VERSION_MINOR" || true ; rm -f /usr/local/cuda-*/targets/x86_64-linux/lib/*static*a || true \
+&& rm -rf /opt/TAMM || true \
+&& rm -rf /opt/cache || true \
 && rm -rf /opt/exachem/build \
 && du -sk /opt/*|sort -n \
 && echo "dddddddddddd"  \
